Service/App_conf/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-multitool  
spec:
  selector:
    matchLabels:
      app: test
  replicas: 1
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: nginx
        image: nginx
        volumeMounts:
            - name: index-file
              mountPath: /usr/share/nginx/html/
      - name: multitool
        image: wbitt/network-multitool
      volumes:
      - name: index-file
        configMap:
          name: myconfigmap
