Service/App_conf/Deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx 
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        volumeMounts:
            - name: index-file
              mountPath: /usr/share/nginx/html/
      volumes:
      - name: index-file
        configMap:
          name: myconfigmap
